Add solver test script and CNF data for benchmarking
- Implemented a new Python script `solver_test.py` to automate the process of running a SAT solver on various CNF files.
- The script decompresses backbone files, executes the solver with different configurations (NeuroBack, Default-Kissat, Random-Kissat), and collects results.
- Added a CSV file `test_scan.csv` containing a list of CNF files along with their respective data counts for testing.
- The script captures and summarizes the output, including solving time and result counts (SAT, UNSAT, TIMEOUT, NO_BACKBONE).

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ processed_data/
 sym_data/
 data/
 models/
+results/
+prediction/
+log/
+solver/makefile
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
